<resources>
    <string name="app_name">Bornali</string>



    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_statistics">Statistics</string>
    <string name="title_activity_help">helpActivity</string>
    <string name="title_activity_help_page">helpPage</string>
    <string name="title_card_category">Categories</string>

    <string name="helpPage_momBtn">Mom</string>
    <string name="helpPage_foodBtn">Food</string>
    <string name="helpPage_waterBtn">Water</string>
    <string name="helpPage_toiletBtn">Toilet</string>
    <string name="helpPage_caretakerBtn">Caretaker</string>
    <string name="helpPage_sleepBtn">Sleep</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="help_action">HELP</string>
    <string name="save_action">Save</string>
    <string name="play_action">Play</string>
    <string name="card_action">Learn</string>
    <string name="practice_action">Practice</string>
    <string name="add_category_action">Add Category</string>
    <string name="add_card_action">Add Card</string>

    <string name="title_activity_puzzle_menu_page">PuzzleMenuPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_level_two">LevelTwo</string>
    <string name="level_win_text">Great!</string>
    <string name="last_level_win_text_layer1">Congratulations!</string>
    <string name="last_level_win_text_layer2">You finished all the levels!!</string>

    <string name="difficulty">Difficulty:</string>
    <string name="easyDifficulty">Easy</string>
    <string name="mediumDifficulty">Medium</string>
    <string name="hardDifficulty">Hard</string>

    <string name="Desc">Description</string>

    <string name="level_one">Level One</string>
    <string name="level_two">Level Two</string>
    <string name="level_three">Level Three</string>
    <string name="level_four">Level Four</string>
    <string name="level_five">Level Five</string>
    <string name="title_activity_custom_draw_practice">CustomDrawPractice</string>

    <string name="category_error">Unable to save</string>
    <string name="category_success">Added successfully!</string>


</resources>
