<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_cameras"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallary"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profiles"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/menu_statistics"/>
    </group>

</menu>
